<resources>
    <string name="app_name">Aroi Restuarant</string>
    <string name="title_authen">ระบบสมาชิก</string>
    <string name="promotion">Promotion</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>

    <string name="service">Please Order</string>
    <string name="new_register">New Register</string>
    <string name="name">Name :</string>
    <string name="user">User :</string>
    <string name="password">Password :</string>
    <string name="register">Register</string>

    <string name="menu1">ระบบโปรโมชั่น</string>
    <string name="menu2">ระบบรายละเอียดโปรโมชั่น</string>
    <string name="menu3">ระบบราคาสินค้าทั้วไป และ สมาชิก</string>
    <string name="menu4">ระบบรายละเอียดราคาสินค้า</string>
    <string name="menu5">ระบบสั่งอาหาร</string>
    <string name="menu6">ระบบลบรายการ</string>
    <string name="menu7">ระบบเพิ่มรายการ</string>
    <string name="menu8">ระบบแก้ไขรายการ</string>
    <string name="menu9">ระบบสถานะการทำอาหารพ่อครัว</string>
    <string name="menu10">ระบบบิลชำระเงิน</string>
    <string name="menu11">ระบบจองโต้ะลูกค้า</string>
    <string name="menu12">ระบบยืนยันช่วงเวลาการจองโต้ะ</string>
    <string name="menu13">ระบบรีวิวคอมเมนต์ คะแนนหัวใจ</string>

    <string name="place">สถานที่</string>
    <string name="food">รสชาดอาหาร</string>
    <string name="service1">บริการ</string>


</resources>
