<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <!--สถานที่-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <RatingBar
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1" />


        </LinearLayout>

        <!--รสชาดอาหาร-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <RatingBar
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1" />


        </LinearLayout>

        <!--บริการ-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <RatingBar
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1" />


        </LinearLayout>

        <!--Comment-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comment"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <EditText
                android:gravity="top"
                android:lines="5"
                android:hint="Comment Here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_alignParentBottom="true"
        android:text="Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>